[PBNTR] Bug Fix: Rails Advanced Table Dark Mode

--- a/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
+++ b/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
@@ -164,6 +164,10 @@
       background: $bg_dark;
     }
 
+    .table-header-cells:first-child, td:first-child {
+      box-shadow: 1px 0px 0px 0px $border_dark !important;
+    }
+
     .table-header-cells {
       background-color: $bg_dark_card !important;
     }
